# optical-character-recognizer-python

./: .gitignore  README.md  main.py  pyproject.toml
tests/: test_captcha_solver_python.py
