[tool.poetry]
name = "captcha-solver-python"
version = "0.1.0"
description = ""
authors = ["tngeene <tngeene27@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
Pillow = "^9.0.1"
pytesseract = "^0.3.9"
scipy = "^1.8.0"
requests = "^2.27.1"
opencv-python = "^4.5.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
